<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_text">Login Or Register</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="login_button_text">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcometextscrollview">WelcomeTextScrollView</string>
    <string name="welcome_screen_content">Shoe store is founded in jan 2023 selling branding shoes,\n Our shoes material is original \n We deliver our products for free ,</string>
    <string name="instruction_screen_content">1-After you logged in you will go to the shoes page, \n 2-Scroll and find the shoe your are looking for,\n 3-Press on the button appear while scrolling to view shoe details \n 4-Press on the menu button and choose logout to logout ,</string>
    <string name="finish">Finish</string>
    <string name="instruction">Instruction</string>
    <string name="next">Next</string>
    <string name="welcome_to_shoe_store">Welcome to shoe store</string>
    <string name="shoesScrollView">shoesScrollView</string>
    <string name="go_to_shoe_details">Go to shoe Details</string>
    <string name="logout">Logout</string>
</resources>